kubernetes-manifests/webapp.yaml
# --- Webapp Deployment ---
# This manages the Python application pods.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-deployment
spec:
  replicas: 2 # Run 2 pods for availability 
  # --- ADD THIS STRATEGY SECTION ---
  strategy:
    type: Recreate
  # ---------------------------------  
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
        - name: webapp
          # IMPORTANT: Replace this with the path to YOUR image in Artifact Registry
          image: goku431/3-tier-todo-app:a4eae72dd0a07f8106360f919911a38a3cebbe81
          ports:
            - containerPort: 8080
---
# --- Webapp Service (Load Balancer) ---
# This exposes our webapp to the internet using a Google Cloud Load Balancer.
apiVersion: v1
kind: Service
metadata:
  name: webapp-service
spec:
  type: LoadBalancer # This is what makes it public!
  selector:
    app: webapp
  ports:
    - protocol: TCP
      port: 80 # The port clients will connect to (e.g., http://EXTERNAL_IP)
      targetPort: 8080 # The port the container is listening on
  template:
    spec:
      containers: []
